# Vault_bomb

./: .gitignore  README.md  architecture.md  deadmans_switch_build_todo.md
contracts/: Cargo.toml  deploy.sh
contracts/src/: lib.rs
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
lit-simulator/: index.js  package-lock.json
tee-simulator/: index.js  package.json
